--- a/.github/workflows/run-r-script.yaml
+++ b/.github/workflows/run-r-script.yaml
@@ -1,7 +1,14 @@
 on:
   push:
     branches: main
-
+    
+  schedule:
+    - cron: "45 15 14 5 *"
+    
+  workflow_dispatch
+  
+  
+  
 jobs:
   run-r-script:
     runs-on: ubuntu-latest
